# lin99

./: CMakeLists.txt  README.md  build.sh
include/lin99/: matrix.h  vector.h
src/: CMakeLists.txt  matrix.c  vector.c
test/: test.c
